feat: adiciona roteamento, controlador, serviço, repositório e dependências referente ao modelo departamento
